# german-notes

./: .gitignore  README.md  pyproject.toml  tasks.py
.github/workflows/: deploy-docs.yml
docs/: conf.py  contributing.md  index.md
docs/_static/: stylesheet.css
docs/_templates/: layout.html
docs/b2/: 06_03.md  06_23.md  06_24.md  06_30.md  07_15.md  07_16.md  07_21.md  07_22.md  10_06.md  12_06.md  22_05.md  26_05.md  27_05.md  3_06.md  index.md  verbs.csv  verbs.md  words.md
docs/extensions/: practice.py  roles.py
