[tool.poetry]
name = "german-learning"
version = "0.1.0"
description = "German learning guide"
authors = ["Sam <samuel.scott.jennings@gmail.com>"]
license = "CC BY 4.0"
readme = "README.md"
homepage = "https://github.com/SamuelJennings/german-learning"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
fairdm-docs = {git = "https://github.com/FAIR-DM/fairdm-docs", extras = ["sphinx-book-theme"]}
invoke = "^2.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
